--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,13 @@
 .App {
   text-align: center;
   background-color: white;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
+
 
 
