--- a/src/MovieSurvey.css
+++ b/src/MovieSurvey.css
@@ -19,10 +19,10 @@
     width:100%; height:100%;
     box-shadow:inset 0px 0px 150px 20px black;
     mix-blend-mode: multiply;
-    -webkit-animation: vignette-anim 3s infinite; /* Safari 4+ */
-    -moz-animation:    vignette-anim 3s infinite; /* Fx 5+ */
-    -o-animation:      vignette-anim 3s infinite; /* Opera 12+ */
-    animation:         vignette-anim 3s infinite; /* IE 10+, Fx 29+ */
+    -webkit-animation: vignette-anim 3s infinite; 
+    -moz-animation:    vignette-anim 3s infinite; 
+    -o-animation:      vignette-anim 3s infinite;
+    animation:         vignette-anim 3s infinite; 
   }
   
   .noise {
